--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/srinivasrk/file-retention-policy-checker#readme",
   "dependencies": {
     "fs-extra": "^7.0.0",
+    "moment": "^2.22.2",
     "tar": "^4.4.6",
     "underscore": "^1.9.1"
   }
